# weather-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/: endpoints.py  schemas.py
app/models/: __init__.py  database.py  search_history.py
app/services/: __init__.py  weather_service.py
docs/: README.md  api.md  architecture.md  changelog.md  deployment.md  development.md  examples.md  troubleshooting.md
src/weather_api/: __init__.py
static/css/: styles.css
static/js/: app.js
templates/: index.html
